Wed Jun 23 17:12:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* NEWS (ptr): new method and deprecated methods.  [ruby-dev:41681]

	* ext/pty/{README,README.ja}: ditto.

	* ext/pty/pty.c (pty_check): add rdoc.

Wed Jun 23 12:44:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_regexp.rb (test_dup_warn): read in UTF-8
	  encoding regardless environment.

	* test/ruby/envutil.rb (invoke_ruby): add encoding option.

Tue Jun 22 23:10:10 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (num_exact): fix for mathn.  [ruby-dev:41599]


Tue Jun 22 22:00:06 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: suppress warnings.

Tue Jun 22 13:26:47 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb: Forward #trust, #untrust, #taint and #untaint
	  to both the delegator and __getobj__ [ruby-core:26138]

Tue Jun 22 01:38:23 2010  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: raise DRbConnError instead of ArgumentError if too
	  many arguments. [ruby-dev:41481]

	* test/drb/test_drb.rb: ditto.

	* test/drb/drbtest.rb: ditto.

Tue Jun 22 00:57:57 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/webrick/httpservlet/filehandler.rb
	  (prevent_directory_traversal): apply filesystem encoding to path
	  only during calling File.expand_path.  [ruby-dev:41423]

Mon Jun 21 23:41:08 2010  wanabe  <s.wanabe@gmail.com>

	* eval_error.c (error_print): clear raised_flag while error-printing
	  to avoid hang. [ruby-core:27608]

	* test/ruby/test_beginendblock.rb (test_endblock_raise): add test for
	  above.

Fri Jun 18 23:08:18 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in (distclean-ext): removes directories for extensions
	  correctly.

	* common.mk (realclean-local): removes id.h too.

Fri Jun 18 01:33:21 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* enc/Makefile.in (realclean): has been missing. necessary
	  for make realclean-enc.

Fri Jun 18 01:12:33 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
